Yaesta index.html

--- a/index.html
+++ b/index.html
@@ -173,6 +173,7 @@
         } else {
           aprobadas.add(id);
         }
+        guardarAprobadas();
         actualizarEstado();
       });
     });
